Main frame scrollbars not updated on hovering when using overlay scrollbars https://bugs.webkit.org/show_bug.cgi?id=153304

Reviewed by Michael Catanzaro.

Legacy scrollbars were fixed in r194155, but overlay scrollbars
are not notified when they are hovered. This is because the layer
hit test in RenderView::hitTest always returns true when using
overlay scrollbars and we are returning early in such case,
ignoring the HitTestRequest::AllowFrameScrollbars flag. So, in
case of using overlay scrollbars we still need to check the
RenderView scrollbars even when the layer hit test succeeded.

* rendering/RenderView.cpp:
(WebCore::RenderView::hitTest):

Canonical link: https://commits.webkit.org/171545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195591 268f45cc-cd09-0410-ab3c-d52691b4dbfc